# remove-premium-sticker-bot

./: .env.sample  bot.py  main.py  pyproject.toml
